--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<form action="get" id="form">
+<form action="post" id="form">
     <div class="header">
         <h1>Workshop Registration</h1>
     </div>
@@ -48,7 +48,7 @@
                     <label for="address"> Address</label>
                 </div>
                 <div class="inp">
-                    <textarea name="address" id="address" cols="20" rows="5"></textarea>
+                    <textarea name="address" id="address" cols="20" rows="5" required></textarea>
                 </div>
             </div>
             <div class="child">
